[package]
name = "kovi-macros"
version = "0.3.0-rc2"
edition = "2021"
description = "An auxiliary library for the kovi crate"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]
repository = "https://github.com/Threkork/Kovi"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
