[package]
name = "kovi-macros"
version = "0.5.1"
edition = "2024"
description = "An auxiliary library for the kovi crate"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]
repository = "https://github.com/Threkork/Kovi"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[features]
dylib = []
