[package]
name = "kovi-macros"
version = "0.5.2"
edition = "2024"
description = "An auxiliary library for the kovi crate"
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]
repository = "https://github.com/ThriceCola/Kovi"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
